--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -12,7 +12,7 @@
 
     <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
       <ul class="nav navbar-nav">
-        <li><a href="#">Places</a></li>
+        <li><%= link_to "Places", places_path %></li>
       </ul>
       <form class="navbar-form navbar-left" role="search">
         <div class="form-group">
@@ -25,9 +25,10 @@
           <li><%= link_to "Settings", edit_user_registration_path %></li>
           <li><%= link_to "Logout", destroy_user_session_path, method: :delete %></li>
         <% else %>
-        <li><%= link_to "Signup", new_user_registration_path %>
+          <li><%= link_to "Signup", new_user_registration_path %>
           <li><%= link_to "Login", new_user_session_path %>
         <% end %>
+
       </ul>
     </div>
   </div>
