--- a/app/views/places/show.html.erb
+++ b/app/views/places/show.html.erb
@@ -19,7 +19,7 @@
       
        <p>
         <strong>Description:</strong>
-        <%=  @place.description %>
+        <%= @place.description %>
       </p>
 
        <div id="map-canvas" style="width: 230px; height: 230px;"></div>
@@ -27,6 +27,12 @@
    </div>
    <div class="col-md-6">
     <h3>Reviews by People</h3>
+    <% if current_user %>
+      <h3>New Review</h3>
+      <%= render "reviews/form" %>
+      <h3>All Reviews</h3>
+      <%= render @reviews %>
+    <% end %>
   </div>
 </div>
 </div>
