--- a/app/views/places/show.html.erb
+++ b/app/views/places/show.html.erb
@@ -50,6 +50,22 @@
           position: mycenter,
           map: map
         });
-      }
+      }          
       google.maps.event.addDomListener(window, 'load', initialize);
+
+      $('.average').raty({
+        starOn: "<%= image_path('star-on.png') %>",
+        starOff: "<%= image_path('star-off.png') %>",
+        score: <%= @place.average_rating %>,
+        readOnly: true
+      });
+
+      <% @reviews.each do |review| %>
+      $('.score_<%= review.id %>').raty({
+        starOn: "<%= image_path('star-on.png') %>",
+        starOff: "<%= image_path('star-off.png') %>",
+        score: <%= review.score %>,
+        readOnly: true
+      });
+      <% end %>        
 </script>
