--- a/app/views/reviews/_review.html.erb
+++ b/app/views/reviews/_review.html.erb
@@ -1,1 +1,2 @@
  <p><%= gravatar_tag review.user.email, size: 20 %> <%= review.content %> by <%= review.user.name %></p>
+ <div class="score_<%= review.id%>"></div>
