--- a/app/views/places/show.html.erb
+++ b/app/views/places/show.html.erb
@@ -2,6 +2,7 @@
   <div class="row">
     <div class="col-md-3">
       <h3><%= @place.name %></h3>
+      <div class="average"></div>
       <p>
         <strong>Address:</strong>
         <%= @place.address %>
@@ -61,11 +62,19 @@
       });
 
       <% @reviews.each do |review| %>
-      $('.score_<%= review.id %>').raty({
+      $(".score_<%= review.id %>").raty({
         starOn: "<%= image_path('star-on.png') %>",
         starOff: "<%= image_path('star-off.png') %>",
         score: <%= review.score %>,
         readOnly: true
       });
-      <% end %>        
+      <% end %>  
+
+      $(".average").raty({
+        starOn: "<%= image_path('star-on.png') %>",
+        starOff: "<%= image_path('star-off.png') %>",
+        score: <%= @place.total_average_rating %>,
+        readOnly: true
+      });
+
 </script>
