--- a/app/views/places/show.html.erb
+++ b/app/views/places/show.html.erb
@@ -1,4 +1,4 @@
-<div class="container">
+<!--<div class="container">-->
   <div class="row">
     <div class="col-md-3">
       <h3><%= @place.name %></h3>
@@ -36,7 +36,7 @@
     <% end %>
   </div>
 </div>
-</div>
+<!--</div>-->
 
 <script type="text/javascript">
       function initialize() {
