--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -5,7 +5,7 @@
   <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track' => true %>
   <%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
   <%= csrf_meta_tags %>
-
+ 
 </head>
 <body>
   <%= render 'layouts/header' %>
@@ -16,9 +16,14 @@
     </div>
   <% end %> 
 
-  <div class="container">
-    <%= yield %>
-  </div>
+<% if current_page?(root_path) %>
+    <div class="landing">
+<% else %>
+    <div class="container">
+<% end %>
+
+      <%= yield %>
+    </div>
 
 </body>
 </html>
